# taubench-modern

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .prettierignore  .prettierignore.make  .prettierrc.json  AGENTS.md  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.ace  Dockerfile.spar  Makefile  PLAN-prebuilt-tools-gallery.md  README.md  TODOs.md  cloudbuild.yaml  compose.override.auth.yml  compose.override.aws-files.yml  compose.yml  conftest.py  deploy-workroom.sh  llms.json  pyproject.toml  run_azure_4trials.sh  schema-linking-architecture.md  start-spar.sh  tox.ini
agent-spec/validation/: .gitignore  README.md  conftest.py  pyproject.toml
agent-spec/validation/_go_validation_tests/: .gitignore  conftest.py  fixtures.py  str_regression_fixture.py  test_go_validation.py
agent-spec/validation/_spec_validation_tests/: _spec_validation.py  list_actions_from_agent.py  test_spec.py  test_spec_v2.py  test_spec_v2_1.py  test_spec_v3.py
agent-spec/validation/developer/: develop.bat  develop.sh  develop.yaml
architectures/default/: README.md  pyproject.toml  versionbump.yaml
architectures/default/agent_architecture_default/: __init__.py
architectures/default/agent_architecture_default_v2/: __init__.py  prompts.py  state.py
architectures/experimental/: README.md  pyproject.toml
core/: .coverage  .gitignore  README.md  pyproject.toml  versionbump.yaml
core/.github/workflows/: build_and_publish.yml  build_workflow.yml  prerelease_workflow.yml  release_workflow.yml  sync_main_dev.yml
core/agent_platform_core/: __init__.py  kernel.py  user.py
core/agent_platform_core/actions/: __init__.py  action_package.py  action_utils.py
core/agent_platform_core/agent/: __init__.py  observability_config.py  question_group.py
core/agent_platform_core/agent_architectures/: __init__.py  entrypoint.py  state.py  step.py  utils.py
core/agent_server_types/: __init__.py  agents.py  annotated.py  common.py  constants.py  files.py  models.py  protocols.py  threads.py
core/agent_server_types_v2/: __init__.py  kernel.py  user.py
core/examples/: azure-platform.ipynb  bedrock-platform.ipynb  cortex-platform.ipynb  embeddings-azure.ipynb  embeddings-bedrock.ipynb  embeddings-cortex.ipynb  embeddings-google.ipynb  embeddings-openai.ipynb  google-platform.ipynb  groq-platform.ipynb  litellm-platform.ipynb  openai-platform.ipynb  parallel-tools.ipynb  prompt-gemini-ex1.ipynb  requirements-common.txt  test-bedrock-via-boto.ipynb  thread-state-deltas.ipynb  tools-from-callable.ipynb  utils.py
core/tests/: bootstrap_agent_server.py  conftest.py  test_agents.py  test_annotated.py  test_configurations.py  test_models.py  test_threads.py  vcr_setup.py
quality/: .config.example.yaml  .gitignore  .quality_config.example.yaml  README.md  package-lock.json  pyproject.toml
quality/docker/: bird-compose.yml  bird-init.sql  bird-tz-fix.sql
quality/docs/: BIRD_CLI_GUIDE.md
quality/ui/: index.html  package-lock.json  package.json  vite.config.ts
server/: .env.example  .gitignore  AGENTS.md  CHANGELOG-PRE-RELEASE.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  agent-server.spec  conftest.py  docker-compose.yml  invoke_requirements.txt  local_start.sh  migrate_ace.sh  otel-collector-config.yaml  pyproject.toml  response-main.postman  tasks.py  towncrier-for-release.toml  towncrier.toml  update_pod.sh  versionbump.yaml
server/.claude/: CLAUDE.md
server/.github/: CODEOWNERS  dependabot.yml
server/agent-server-interface/: .gitignore  .prettierrc  README.md  package.json  tsconfig.json  tsup.config.ts
server/agent_platform_server/: app.py  constants.py  env_vars.py  message_types.py  stream.py  utils.py
server/backend/: .gitignore  Dockerfile  Makefile  README.md  codeartifact.sh  pyproject.toml
server/docs/: api.md  cognitive-architectures.md  developer.md  llms.md  publishing.md  tools.md
server/examples/: create-agent-azure.ipynb  create-agent-bedrock.ipynb  create-agent-cortex.ipynb  create-agent-google.ipynb  create-agent-groq.ipynb  create-agent-litellm.ipynb  create-agent-openai.ipynb  create-agent.ipynb  ephemeral_widget.py  requirements-common.txt  test-ephemeral-endpoint.ipynb  utils.py  widget.py
server/go-wrapper/: .gitignore  go.mod  go.sum  main.go
server/llm-utils/: README.md  jest.config.js  package.json  tsconfig.json  tsup.config.ts
server/scripts/: configure_git_credentials.ps1  configure_git_credentials.sh  notarize.sh  pre-commit  pre-commit.bat  pre-push  pre-push.bat  repro_sqlite_commit_in_progress.py
server/sema4ai_agent_server/: __init__.py  agent.py  agent_architecture_manager.py  agent_spec.py  configuration_manager.py  constants.py  kernal.py  langsmith_client.py  lifespan.py  llms.py  log_config.py  message_types.py  otel.py  parsing.py  responses.py  retrieval.py  schema.py  server.py  snowflake_cortex_embeddings.py  stream.py  tools.py  utils.py
server/tests/: agent_client.py  auth_fixtures.py  auth_helpers.py  bootstrap_agent_server.py  conftest.py  storage_fixtures.py  test_evals_metadata.py  test_import_all.py  test_lifespan.py  test_openapi_platform_configs.py  test_preinstalled_agents.py  test_shutdown_manager.py  test_sql_generation_preinstalled_agent.py
server/wheels/: pyjaq-0.1.0-py3-none-any.whl  sema4ai_docint-0.1.3-py3-none-any.whl  sema4ai_docint-0.2.1-py3-none-any.whl  sema4ai_docint-0.2.11-py3-none-any.whl  sema4ai_docint-0.2.12-py3-none-any.whl  sema4ai_docint-0.2.5-py3-none-any.whl  sema4ai_docint-0.2.9-py3-none-any.whl  sema4ai_docint-0.3.1-py3-none-any.whl  sema4ai_docint-0.4.0-py3-none-any.whl  sema4ai_docint-0.4.11-py3-none-any.whl  sema4ai_docint-0.4.12-py3-none-any.whl  sema4ai_docint-0.4.2-py3-none-any.whl  sema4ai_docint-0.4.7-py3-none-any.whl  sema4ai_docint-0.5.0-py3-none-any.whl  sema4ai_docint-0.5.6-py3-none-any.whl  sema4ai_docint-0.8.1-py3-none-any.whl
workitems/: README.md  alembic.ini  pyproject.toml
workitems/alembic/: env.py
workitems/tests/: conftest.py  test_e2e.py  test_invoke_agent.py  test_worker.py  test_workitem_service.py  test_workitems.py
(+7204 files in other folders)
