[project]
name = "agent_platform"
version = "2.0.0"
requires-python = ">=3.12.9,<3.13"
authors = [{ name = "Sema4.ai Engineering", email = "engineering@sema4.ai" }]
description = "Platform for building and running agents."
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "freezegun>=1.5.4",
    "pytest-asyncio>=0.25.2,<0.26.0",
    "pillow>=11.1.0,<12.0.0",
    "IPython>=8.31.0,<9.0.0",
    "requests>=2.31.0,<3.0.0",
    "testing-postgresql>=1.3.0,<2.0.0",
    "pyright>=1.1.407,<1.2.0",
    "vcrpy>=4.1.1,<5.0.0",
    "coverage>=7.6.7,<8.0.0",
    "click>=8.1.8,<9.0.0",
    "sema4ai-build-common>=0.0.3",
    "mu-repo>=1.9.0",
    "pytest-regressions==2.7.0",
    "pytest-mock>=3.14.1",
    "pre-commit>=4.2.0",
    "flaky>=3.8.1,<4.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "nbstripout>=0.7.1",
    "pyleak>=0.1.14",
    "pytest-xdist>=3.8.0,<4.0.0",
    "jsonschema>=4.25.1",
    "websocket-client>=1.8.0,<2.0.0",
]
lint = ["ruff>=0.7.2,<0.12.0"]
notebooks = [
    "IPython>=8.31.0,<9.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1.5,<9.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "anywidget>=0.9.15,<1.0.0",
    "numpy>=2.2.5,<3.0.0",
    "websockets>=13.0.0,<14.0.0",
]
build = ["pyinstaller==6.11.1"]

[tool.uv]
package = false
python-preference = "only-managed"
# Temporarily add an override as sema4ai-actions depends on <crypto45
override-dependencies = ["cryptography>=45"]

[tool.uv.sources]
agent_platform_core = { workspace = true }
agent_platform_architectures_default = { workspace = true }
agent_platform_architectures_experimental = { workspace = true }
agent_platform_server = { workspace = true }
agent_platform_quality = { workspace = true }
sema4ai-docint = { workspace = true }

[tool.uv.workspace]
members = [
    "architectures/default/",
    "architectures/experimental/",
    "core/",
    "server/",
    "quality/",
    "document-intelligence/",
]

[tool.pytest.ini_options]
timeout = 600
pythonpath = ["."]
testpaths = ["core/tests", "server/tests", "quality/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "postgresql: marks tests that require PostgreSQL (deselect with '-m \"not postgresql\"')",
    "cloud: marks tests that require cloud storage (deselect with '-m \"not cloud\"')",
    "parallel_work_items: marks tests that run work items across multiple parallel servers (must be explicitly requested with '-m parallel_work_items')",
    "spar: marks tests that run against an active spar-no-auth docker SPAR profile (deselect with '-m \"not spar\"')",
    "real_selector: run with the real DefaultModelSelector implementation",
    "semantic_data_models: marks tests that run against semantic data models (deselect with '-m \"not semantic_data_models\"')",
    "semantic_data_models_edge_cases: marks tests that run against semantic data models edge cases (deselect with '-m \"not semantic_data_models_edge_cases\"')",
    "json_queries: marks tests for JSON/JSONB column queries in semantic data models (deselect with '-m \"not json_queries\"')",
    "batch1: batch 1 of semantic data model tests (Basic Retrieval - 4 tests)",
    "batch2: batch 2 of semantic data model tests (Comparison Queries - 3 tests)",
    "batch3: batch 3 of semantic data model tests (Aggregation - 4 tests)",
    "batch4: batch 4 of semantic data model tests (Derived/Conditional - 3 tests)",
    "batch5: batch 5 of semantic data model tests (Time-Based - 2 tests)",
    "batch6: batch 6 of semantic data model tests (Advanced - 3 tests)",
]
filterwarnings = [
    # Ignore pkg_resources/declare_namespace deprecation warnings from snowflake-snowpark-python
    # Annoying, but reduces log noise
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:snowflake\\.snowpark\\.session.*",
    "ignore:Deprecated call to `pkg_resources.declare_namespace.*`:DeprecationWarning:pkg_resources.*",
    # Ignore datetime boto3 warnings
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated and scheduled for removal in a future version.:DeprecationWarning:botocore.*",
]


[tool.ruff]
line-length = 120
show-fixes = true
respect-gitignore = true
exclude = [
    "external-benchmarks/tau2/tau2-bench/**",
    "external-benchmarks/tau2/tau2-bench.git/**",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "PL",
    "N",
    "UP",
    "B",
    "A",
    "COM",
    "PT",
    "RUF",
    "W",
    "C90",
    "TID253",
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "COM812",
    "C901",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "PLR0911",
    "PLC0415",
]
exclude = ["scripts/*.py"]

[tool.ruff.lint.per-file-ignores]
"core/examples/**/*.ipynb" = ["PLE1142", "TID253"]
"core/tests/**/*.py" = ["PLR2004"]
"architectures/*/examples/**/*.ipynb" = ["PLE1142"]
"architectures/*/tests/**/*.py" = ["PLR2004"]
"server/tests/**/*.py" = ["PLR2004", "N802"]
"quality/tests/**/*.py" = ["PLR2004"]
"server/tests/endpoints/test_doc_int_endpoints.py" = ["TID253"]
"document-intelligence/tests/**/*.py" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = [
    "agent_platform.core",
    "agent_platform.quality",
    "agent_platform.architectures.default",
    "agent_platform.architectures.experimental",
    "agent_platform.server",
    "sema4ai.common",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
# Ban certain modules from being imported at module level, instead requiring
# that they're imported lazily (e.g., within a function definition).
banned-module-level-imports = [
    "pandas",
    "ibis",
    "numpy",
    "sqlglot",
    "pyarrow",
    "openai",
    "google",
    "groq",
    "types_boto3_bedrock_runtime",
    "botocore",
    "aiobotocore",
    "boto3",
]

[tool.pyright]
exclude = [
    "**/dist",
    "**/build",
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/venv",
    "agent-spec/validation/**",
    "packages/**",
    "external-benchmarks/tau2",
]
# Document-intelligence files being incrementally type-checked
# These are analyzed but errors are not reported
ignore = [
    "document-intelligence/sema4ai_docint/__init__.py",
    "document-intelligence/sema4ai_docint/agent_server_client/client.py",
    "document-intelligence/sema4ai_docint/agent_server_client/docx_to_markdown.py",
    "document-intelligence/sema4ai_docint/agent_server_client/images.py",
    "document-intelligence/sema4ai_docint/agent_server_client/transport/http.py",
    "document-intelligence/sema4ai_docint/agent_server_client/transport/memory.py",
    "document-intelligence/sema4ai_docint/extraction/reducto/async_.py",
    "document-intelligence/sema4ai_docint/extraction/reducto/client.py",
    "document-intelligence/sema4ai_docint/models/data_model.py",
    "document-intelligence/sema4ai_docint/models/document.py",
    "document-intelligence/sema4ai_docint/models/document_layout.py",
    "document-intelligence/sema4ai_docint/models/initialize.py",
    "document-intelligence/sema4ai_docint/schemas/data_model.py",
    "document-intelligence/sema4ai_docint/services/_document.py",
    "document-intelligence/sema4ai_docint/services/_knowledge_base_service.py",
    "document-intelligence/sema4ai_docint/services/_setup_kb.py",
    "document-intelligence/sema4ai_docint/services/di_service.py",
    "document-intelligence/sema4ai_docint/services/persistence/file/chat_file_accessor.py",
    "document-intelligence/sema4ai_docint/validation/validate.py",
    "document-intelligence/sema4ai_docint/views/schema.py",
    "document-intelligence/tests/**",
    "document-intelligence/tasks.py",
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "All"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
