[project]
name = "agent_platform_core"
version = "2.0.0"
requires-python = ">=3.12"
authors = [{ name = "Sema4.ai Engineering", email = "engineering@sema4.ai" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
"agent_platform.core" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
