[project]
name = "agent_platform_core"
version = "2.0.0"
requires-python = ">=3.12"
authors = [{ name = "Sema4.ai Engineering", email = "engineering@sema4.ai" }]

dependencies = [
    "jsonpatch>=1.33,<2.0.0",
    "langsmith>=0.3.35",
    "mcp>=1.4.1,<2.0.0",
    "opentelemetry-api>=1.31.1,<2.0.0",
    "ruamel.yaml>=0.18.10,<0.19.0",
]

[project.optional-dependencies]
image-support = ["pillow>=11.1.0,<12.0.0", "IPython>=8.31.0,<9.0.0"]
platforms-snowflake = ["snowflake-snowpark-python>=1.30.0,<2.0.0"]
platforms-openai = ["openai>=1.59.8,<2.0.0"]
platforms-anthropic = ["anthropic>=0.41.3,<1.0.0"]
platforms-aws = [
    "boto3>=1.36.9,<2.0.0",
    "types-boto3[bedrock,bedrock-runtime]>=1.36.9,<2.0.0",
]
platforms-google = [
    "google-genai>=1.11.0,<2.0.0",
]
platforms-groq = [
    "groq>=0.22.0,<1.0.0",
]
platforms-all = [
    "openai>=1.59.8,<2.0.0",
    "anthropic>=0.41.3,<1.0.0",
    "snowflake-snowpark-python>=1.30.0,<2.0.0",
    "boto3>=1.36.9,<2.0.0",
    "types-boto3[bedrock,bedrock-runtime]>=1.36.9,<2.0.0",
    "google-genai>=1.11.0,<2.0.0",
    "groq>=0.22.0,<1.0.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/agent_platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "sema4ai-common>=0.0.9,<0.1.0",
]
