[project]
name = "agent_platform_core"
version = "2.0.0"
requires-python = ">=3.12"
authors = [{ name = "Sema4.ai Engineering", email = "engineering@sema4.ai" }]

dependencies = [
    "jsonpatch>=1.33,<2.0.0",
    "mcp>=1.13.1,<2.0.0",
    "opentelemetry-api>=1.36.0,<2.0.0",
    "ruamel.yaml>=0.18.15,<0.19.0",
    "httpx-retries>=0.4.2,<1.0.0",
    "httpx>=0.28.1,<0.29.0",
    "tenacity>=9.1.2,<10.0.0",
    "cryptography>=45,<46",
    "ibis-framework[datafusion,duckdb,postgres,snowflake,sqlite]>=10.8.0,<11.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "fastexcel>=0.15.1,<1.0.0",
    "tiktoken>=0.11.0,<1.0.0",
    "h2>=4.3.0,<5.0.0",
    "packaging>=24.2,<25.0.0",
]

[project.optional-dependencies]
image-support = ["pillow>=11.3.0,<12.0.0", "IPython>=8.31.0,<9.0.0"]
platforms-snowflake = ["snowflake-snowpark-python>=1.37.0,<2.0.0"]
platforms-openai = ["openai>=1.106.0,<2.0.0"]
platforms-anthropic = ["anthropic>=0.66.0,<1.0.0"]
platforms-aws = [
    "boto3>=1.40.15,<2.0.0",
    "types-boto3[bedrock,bedrock-runtime]>=1.40.15,<2.0.0",
    "aiobotocore>=2.24.2,<3.0.0",
]
platforms-google = ["google-genai>=1.33.0,<2.0.0"]
platforms-groq = ["groq>=0.31.0,<1.0.0"]
platforms-reducto = ["reductoai>=0.9.0,<1.0.0"]
platforms-all = [
    "openai>=1.106.0,<2.0.0",
    "anthropic>=0.66.0,<1.0.0",
    "snowflake-snowpark-python>=1.37.0,<2.0.0",
    "boto3>=1.40.15,<2.0.0",
    "types-boto3[bedrock,bedrock-runtime]>=1.40.15,<2.0.0",
    "aiobotocore>=2.24.2,<3.0.0",
    "google-genai>=1.33.0,<2.0.0",
    "groq>=0.31.0,<1.0.0",
    "reductoai>=0.9.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["sema4ai-common==0.1.0"]
