[project]
name = "agent_platform_quality"
version = "1.0.0"
requires-python = ">=3.12.9,<3.13"
authors = [{ name = "Sema4.ai Engineering", email = "engineering@sema4.ai" }]
description = "Quality testing CLI for agent platform"
dependencies = [
    "agent_platform_core",
    "agent_platform_server",
    "click>=8.1.8,<9.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "structlog>=24.4.0,<25.0.0",
    "httpx>=0.28.1,<0.29.0",
    "rich>=13.0.0,<14.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "testcontainers>=4.0.0",
]

[project.scripts]
quality-test = "agent_platform.quality.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 
