[project]
name = "agent_platform_server"
version = "2.0.1"
requires-python = ">=3.12.9,<3.13"
authors = [{ name = "Sema4.ai Engineering", email = "engineering@sema4.ai" }]
dependencies = [
    "agent_platform_core",
    "agent_platform_architectures_default",
    "agent_platform_workitems",
    "structlog>=24.4.0,<25.0.0",
    "uvicorn>=0.34.0,<0.35.0",
    "httpx>=0.28.1,<0.29.0",
    "fastapi>=0.115.6,<0.116.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "psycopg[binary,pool]>=3.2.2,<4.0.0",
    "python-multipart>=0.0.18,<0.0.19",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0,<2.0.0",
    "orjson>=3.10.7,<4.0.0",
    "traceloop-sdk>=0.34.0,<0.35.0",
    "opentelemetry-sdk>=1.31.1,<2.0.0",
    "opentelemetry-api>=1.31.1,<2.0.0",
    "sema4ai-common==0.1.0",
    "pyjwt[crypto]>=2.9.0,<3.0.0",
    "psutil>=6.1.1,<7.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "cachetools>=5.5.2,<6.0.0",
]

[project.scripts]
agent-server = "agent_platform.server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
