[project]
name = "agent_platform_workitems"
version = "0.1.0"
requires-python = ">=3.12"
authors = [{name="Sema4.ai Engineering", email="engineering@sema4.ai"}]
dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "psycopg[binary,pool]>=3.2.2,<4.0.0",
    "alembic>=1.13.1,<2.0.0",
    "agent_platform_core",
]

[project.scripts]
workitems-server = "agent_platform.workitems.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

