[project]
name = "sema4ai-agent-spec"
version = "0.0.1"
description = "Sema4.ai: Agent Spec"
authors = [{ name = "Sema4.ai Engineering", email = "engineering@sema4.ai" }]
readme = "README.md"
repository = "https://github.com/Sema4AI/agents-spec/"
license = "Proprietary"
requires-python = ">=3.10,<3.13"
packages = [
    {include = "_spec_validation_tests", from = "."},
    {include = "_go_validation_tests", from = "."},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6",
    "tree-sitter>=0.22.3",
    "tree-sitter-yaml>=0.6.0",
    "ruff>=0.1.14",
    "mypy>=1.1.1",
    "pytest>=8.3.3",
    "pytest-xdist",
    "pytest-regressions>=2.5.0",
    "sema4ai-http-helper>=1.0.1",
    "pytest-timeout>=2.4.0",
]

[tool.mypy]
mypy_path = "."
exclude = [
  "_go_validation_tests/test_go_validation/agent2",
]

[tool.isort]
profile = "black"

[tool.uv]
package = false
python-preference = "only-managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
show-fixes = true
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
timeout = 600
pythonpath = ["."]
testpaths = ["_go_validation_tests", "_spec_validation_tests"]
addopts = ["--force-regen"]
