[tool.poetry]
name = "agent-architecture-default-v2"
version = "1.0.2"
description = "Tool using cognitive architecture for agents supporting OpenAI LLMs."
authors = ["Sema4.ai Engineering <engineering@sema4.ai>"]
readme = "README.md"
packages = [{ include = "agent_architecture_default_v2" }]

[tool.poetry.dependencies]
python = "^3.11.0,<3.12"
agent-server-types = { git = "https://github.com/Sema4AI/agent-server-types.git", tag = "v1.1.2-alpha" }
agent-architecture = { git = "https://github.com/Sema4AI/agent-architecture.git", tag = "v1.1.1-alpha.1" }

[tool.poetry.plugins."agent_architectures"]
agent_architecture_default_v2 = "agent_architecture_default_v2:OpenaiToolsAgentArchitecture"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
line-length = 88
target-version = "py311"
show-fixes = true
respect-gitignore = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Combine your existing rules with some additional ones
select = [
    "E",
    "F",
    "I",
    "PL",
    "N",
    "UP",
    "B",
    "A",
    "COM",
    "PT",
    "RUF",
    "W",
    "C90",
]
fixable = ["ALL"]
unfixable = []

# Keep your existing per-file-ignores
[tool.ruff.lint.per-file-ignores]
"examples/*.ipynb" = ["PLE1142"]
"tests-v2/*.py" = ["PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["agent_server_types_v2", "sema4ai_agent_server"]

[tool.ruff.lint.pydocstyle]
convention = "google"
