[project]
name = "agent_platform_architectures_default"
version = "2.0.0"
requires-python = ">=3.12"
authors = [
    {name="Sema4.ai Engineering", email="engineering@sema4.ai"}
]
dependencies = [
    "agent_platform_core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_platform/architectures/default"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
