[tool.poetry]
name = "sema4ai-agent-server"
version = "0.2.1"
description = ""
authors = ["Sema4.ai Engineering <engineering@sema4.ai>"]
readme = "README.md"
packages = [{include = "sema4ai_agent_server"}]

[tool.poetry.dependencies]
python = "^3.9.0,<3.12"

arxiv = "2.1.0"
asyncpg = "0.29.0"
beautifulsoup4 = "4.12.3"
boto3 = "1.34.28"
duckduckgo-search = "5.3.0"
fastapi = "0.103.2"
fireworks-ai = "0.11.2"
httpx = "0.25.2"
jmespath = "1.0.1"
kay = "0.1.2"
langchain-anthropic = "0.1.8"
langchain-chroma = "0.1.1"
langchain-core = "0.1.52"
langchain-google-vertexai = "1.0.1"
langchain-openai = "0.1.3"
langchain-robocorp = "0.0.9"
langchain = "0.1.10"
langgraph = "0.0.38"
langserve = "0.0.32"
openpyxl = "3.1.2"
orjson = "3.10.0"
pandas = "2.2.2"
pdfminer-six = "20231228"
pgvector = "0.2.5"
psycopg = "3.2.1"
psycopg-pool = "3.2.2"
psycopg2-binary = "2.9.9"
psycopg2-pool = "1.2"
pydantic = "1.10.13"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-json-logger = "2.0.7"
python-multipart = "0.0.6"
setuptools = "69.0.3"
sse-starlette = "1.8.2"
structlog = "24.1.0"
tenacity = "8.4.1"
tiktoken = "0.5.2"
tomli-w = "1.0.0"
unstructured = "0.12.5"
uvicorn = "0.23.2"
wikipedia = "1.4.0"
xmltodict = "0.13.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
pygithub = "^2.1.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.4"
codespell = "^2.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-socket = "^0.6.0"
pytest-watch = "^4.2.0"
pytest-timeout = "^2.2.0"

[tool.poetry.scripts]
agent-server = "sema4ai_agent_server.server:main"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[[tool.poetry.source]]
name = "codeartifact"
url = "https://sema4ai-710450854638.d.codeartifact.eu-west-1.amazonaws.com/pypi/agent-server/"
priority = "supplemental"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
addopts = "--strict-markers --strict-config --durations=5 -vv"
# Use global timeout of 30 seconds for now.
# Most tests should be closer to ~100 ms, but some of the tests involve
# parsing files. We can adjust on a per test basis later on.
timeout = 30
asyncio_mode = "auto"

[tool.bumpversion]
current_version = "0.2.1"
search = "{current_version}"
replace = "{new_version}"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "../README.md"
search = "`{current_version}`"
replace = "`{new_version}`"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
